<resources>
    <string name="app_name">JJIKMUK</string>


    <!-- =========================
         Auth 공통 문구
         사용 화면:
         - fragment_signup_email.xml
         - fragment_login_password.xml
         - fragment_forgot_password.xml
         - fragment_otp_verification.xml
         - fragment_new_password.xml
         ========================= -->

    <string name="auth_back">뒤로가기</string>
    <string name="auth_welcome_hero">찍먹 시작 화면 음식 이미지</string>
    <string name="auth_signup">회원가입</string>


    <!-- =========================
         로그인 이메일 입력 화면
         사용 화면:
         - fragment_signup_email.xml
         ========================= -->

    <string name="auth_login_title">다시 오신 걸 환영해요!\n어떤 걸 찍어 먹어볼까요?</string>
    <string name="auth_login_email_description">로그인 또는 회원가입을 위해\n이메일 주소를 입력해 주세요</string>
    <string name="auth_email_hint">email@example.com</string>
    <string name="auth_confirm">확인</string>


    <!-- =========================
         로그인 비밀번호 입력 화면
         사용 화면:
         - fragment_login_password.xml
         ========================= -->

    <string name="auth_login_password_description">다시 오신 걸 환영해요!\n비밀번호를 입력해 주세요</string>
    <string name="auth_password_hint">비밀번호 입력</string>
    <string name="auth_password_visibility_toggle">비밀번호 보기/숨기기</string>
    <string name="auth_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="auth_login">로그인</string>
    <string name="auth_error_invalid_credentials">이메일 또는 비밀번호를 다시 확인해 주세요</string>
    <string name="auth_login_with_google">Or Login with</string>
    <string name="auth_google_login">Google 로그인</string>
    <string name="auth_signup_prompt">계정이 없으신가요?</string>
    <string name="auth_signup_cta">회원가입 하기</string>


    <!-- =========================
         비밀번호 찾기 화면
         사용 화면:
         - fragment_forgot_password.xml
         ========================= -->

    <string name="auth_forgot_password_title">비밀번호를 잊으셨나요?</string>
    <string name="auth_forgot_password_description">인증을 위해 계정과 연결된\n이메일 주소를 입력해 주세요</string>
    <string name="auth_send_code">코드 전송하기</string>
    <string name="auth_signup_email_title">이메일 인증</string>
    <string name="auth_signup_email_description">회원가입을 위해\n이메일 주소를 인증해 주세요</string>


    <!-- =========================
         인증번호 입력 화면
         사용 화면:
         - fragment_otp_verification.xml
         ========================= -->

    <string name="auth_otp_title">인증번호 입력</string>
    <string name="auth_otp_description">이메일로 보내드린\n인증번호 4자리를 입력해 주세요</string>
    <string name="auth_verify">인증하기</string>
    <string name="auth_otp_error_invalid_code">인증 번호를 다시 확인해 주세요.</string>
    <string name="auth_otp_timer_prefix">남은 인증시간</string>
    <string name="auth_otp_resend_text">인증번호를 받지 못하셨나요? 재전송</string>


    <!-- =========================
         새 비밀번호 생성 화면
         사용 화면:
         - fragment_new_password.xml
         ========================= -->

    <string name="auth_new_password_title">새 비밀번호 생성</string>
    <!-- 로그인 이메일 입력 화면 오류 -->
    <string name="auth_error_invalid_email_format">올바른 이메일 주소 형식이 아니에요.</string>

    <!-- 로그인 비밀번호 입력 화면 오류 -->
    <string name="auth_error_password_mismatch">비밀번호를 다시 확인해 주세요.</string>

    <!-- 비밀번호 찾기 이메일 입력 화면 오류 -->
    <string name="auth_error_email_check">이메일 주소를 다시 확인해 주세요.</string>

    <!-- 새 비밀번호 생성 화면 -->
    <string name="auth_new_password_description">새 비밀번호를 설정해 주세요\n비밀번호는 6자리 이상이어야 해요</string>
    <string name="auth_error_password_min_length">비밀번호는 6자리 이상이어야 합니다.</string>
    <string name="auth_error_confirm_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="auth_new_password_hint">새 비밀번호</string>
    <string name="auth_confirm_password_hint">비밀번호 확인</string>


    <!-- =========================
         비밀번호 변경 완료 화면
         사용 화면:
         - fragment_password_change_complete.xml
         ========================= -->

    <string name="auth_password_change_complete_title">비밀번호 변경완료</string>
    <string name="auth_password_change_complete_description">비밀번호를 성공적으로 변경하였습니다</string>
    <string name="auth_login_action">로그인 하기</string>


    <!-- 회원가입 닉네임 생성 화면 -->
    <string name="auth_create_nickname_title">닉네임 생성</string>
    <string name="auth_create_nickname_description">앱에서 사용할 이름을 알려주세요</string>
    <string name="auth_nickname_hint">닉네임 입력</string>
    <string name="auth_error_nickname_exists">이미 사용중인 닉네임입니다.</string>

    <!-- 회원가입 비밀번호 생성 화면 -->
    <string name="auth_create_password_title">비밀번호 생성</string>
    <string name="auth_create_password_description">찍먹에 오신 걸 환영해요!\n비밀번호는 6자리 이상 입력해 주세요</string>

    <!-- 알러지 선택 화면 -->
    <string name="auth_allergy_title">알러지 선택</string>
    <string name="auth_allergy_description">안전한 식품 추천을 위해\n가지고 계신 알러지 항목을 선택해 주세요</string>
    <string name="auth_allergy_complete_format">%1$d개 선택완료</string>

    <!-- 프로필 설정 화면 -->
    <string name="auth_profile_setting_title">프로필 설정</string>
    <string name="auth_profile_setting_description">앱에서 사용할 프로필 사진과\n최종 정보를 확인해 주세요</string>
    <string name="auth_profile_image">프로필 이미지</string>
    <string name="auth_profile_camera">프로필 사진 변경</string>
    <string name="auth_profile_name_label">이름(닉네임)</string>
    <string name="auth_profile_allergy_label">선택한 알레르기</string>
    <string name="auth_profile_allergy_edit">수정</string>
    <string name="auth_profile_no_allergy">선택된 알러지가 없습니다.</string>
    <string name="auth_start">시작하기</string>
    <string name="auth_input_clear">입력 내용 지우기</string>

    <!-- 회원가입 완료 화면 -->
    <string name="auth_signup_complete_title">회원가입 완료</string>
    <string name="auth_signup_complete_description">계정을 성공적으로 생성하였습니다</string>
</resources>
